<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="4"
    android:background="@color/background_color"
    android:padding="5dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashra.allbanglanewspapers.MainActivity">



    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/firstCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/pic1"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option1"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <!-- 2nd card view -->
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/secondCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundpink"
                    android:padding="10dp"
                    android:src="@drawable/pic2"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />



                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option2"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>




    </LinearLayout>


    <!-- 2nd linearlayout -->

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/thirdCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundgreen"
                    android:padding="10dp"
                    android:src="@drawable/pic3"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option3"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <!-- 2nd card view -->
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/fourthCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundblue"
                    android:padding="10dp"
                    android:src="@drawable/pic4"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />



                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option4"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>



    </LinearLayout>

    <!-- ////////////////////new -->

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/fifthCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundpurple"
                    android:padding="10dp"
                    android:src="@drawable/pic5"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option5"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <!-- 2nd card view -->
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/sixthCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundpink"
                    android:padding="10dp"
                    android:src="@drawable/pic6"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />



                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option6"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>




    </LinearLayout>


    <!-- 2nd linearlayout -->

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/seventhCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundgreen"
                    android:padding="10dp"
                    android:src="@drawable/pic7"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option7"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>


        <!-- 2nd card view -->
        <android.support.v7.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="10dp"
            android:id="@+id/eighthCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circlebackgroundblue"
                    android:padding="10dp"
                    android:src="@drawable/pic8"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />



                <TextView
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/option8"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>



    </LinearLayout>


</LinearLayout>
